--- a/.gitignore
+++ b/.gitignore
@@ -7,6 +7,8 @@ yarn-error.log*
 pnpm-debug.log*
 lerna-debug.log*
 
+.next/
+
 node_modules
 dist
 dist-ssr
@@ -22,3 +24,81 @@ dist-ssr
 *.njsproj
 *.sln
 *.sw?
+.next/trace/
+.next/cache/*
+
+# Build files
+*.o
+*.out
+*.dll
+*.pdb
+*.so
+*.exe
+*.dylib
+
+# Test coverage
+coverage
+*.lcov
+
+# Production
+.env.local
+.env.development.local
+.env.test.local
+.env.production.local
+
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+
+# TypeScript cache
+*.tsbuildinfo
+
+# Next.js build output
+.next
+out
+
+# Next.js cache
+.cache
+
+# Environment variables
+.env
+.env*.local
+
+# Dependency directories
+node_modules/
+jspm_packages/
+
+# Optional npm cache directory
+.npm
+
+# Optional eslint cache
+.eslintcache
+
+# Optional REPL history
+.node_repl_history
+
+# Output of 'npm pack'
+*.tgz
+
+# Yarn Integrity file
+.yarn-integrity
+
+# dotenv environment variables file
+.env
+.env.test
+
+# parcel-bundler cache (https://parceljs.org/)
+.cache
+.parcel-cache
+
+# Next.js build output
+.next
+out
+
+# Nuxt.js build / generate output
+.nuxt
+dist
+
+# Gatsby files
+.cache/
+# Comment in the public line in if your project uses Gatsby
