--- a/package.json
+++ b/package.json
@@ -22,7 +22,9 @@
     "tailwind-merge": "^2.2.0",
     "@prisma/client": "^5.10.0",
     "next-auth": "^4.24.6",
-    "bcryptjs": "^2.4.3"
+    "bcryptjs": "^2.4.3",
+    "xlsx": "^0.18.5",
+    "papaparse": "^5.4.1"
   },
   "devDependencies": {
     "@types/node": "^20.11.0",
@@ -34,6 +36,7 @@
     "typescript": "^5.3.0",
     "prisma": "^5.10.0",
     "ts-node": "^10.9.2",
-    "@types/bcryptjs": "^2.4.6"
+    "@types/bcryptjs": "^2.4.6",
+    "@types/papaparse": "^5.3.14"
   }
 }
