chore(env): update environment variables template and .env configuration
- Added detailed comments and instructions for .env template usage
- Updated database URL for production environment example
- Included critical NextAuth secret generation notes and security guidelines
- Added sections on deployment environment and banking compliance
- Set NEXTAUTH_SECRET example value in .env for development
- Defined NODE_ENV and other config defaults in the template
- Enhanced security recommendations for managing secrets and file permissions
- Refined environment distinctions for production readiness

--- a/package.json
+++ b/package.json
@@ -7,10 +7,13 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
-    "postinstall": "prisma generate"
+    "postinstall": "prisma generate",
+    "init-admin": "ts-node -P tsconfig.scripts.json prisma/init-admin.ts",
+    "reset-password": "ts-node -P tsconfig.scripts.json prisma/reset-password.ts",
+    "check-users": "ts-node -P tsconfig.scripts.json prisma/check-users.ts"
   },
   "prisma": {
-    "seed": "ts-node --compiler-options {\"module\":\"CommonJS\"} prisma/seed.ts"
+    "seed": "ts-node -P tsconfig.scripts.json prisma/seeds/seed.ts"
   },
   "dependencies": {
     "next": "14.1.0",
