chore(env): update database configuration and gitignore rules
- Change DATABASE_URL from deploy.db to prod.db for production environment
- Add database-related files and prisma db files to .gitignore
- Remove QUICK_START_IMPORT.md documentation file
- Rename multiple markdown docs files into docs/ directory for better organization
- Clean up unused import of UserRole in MatchControls component

--- a/.env
+++ b/.env
@@ -8,7 +8,7 @@
 # Database Configuration
 # For production, use a dedicated path outside the project directory
 # Example: DATABASE_URL="file:/var/lib/analyzer-web/production.db"
-DATABASE_URL="file:./deploy.db"
+DATABASE_URL="file:./prod.db"
 
 # NextAuth Configuration
 # CRITICAL: Generate a secure random secret before deployment
