chore(package): add diagnose script to package.json
- Added "diagnose" script to run prisma/diagnose-production.ts with ts-node
- Updated scripts section to include new diagnose command alongside check-users
- Improved developer tooling for production diagnosis tasks

--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "postinstall": "prisma generate",
     "init-admin": "ts-node -P tsconfig.scripts.json prisma/init-admin.ts",
     "reset-password": "ts-node -P tsconfig.scripts.json prisma/reset-password.ts",
-    "check-users": "ts-node -P tsconfig.scripts.json prisma/check-users.ts"
+    "check-users": "ts-node -P tsconfig.scripts.json prisma/check-users.ts",
+    "diagnose": "ts-node -P tsconfig.scripts.json prisma/diagnose-production.ts"
   },
   "prisma": {
     "seed": "ts-node -P tsconfig.scripts.json prisma/seeds/seed.ts"
