--- a/package.json
+++ b/package.json
@@ -7,6 +7,9 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
+    "test": "jest",
+    "test:watch": "jest --watch",
+    "test:coverage": "jest --coverage",
     "postinstall": "prisma generate",
     "init-admin": "ts-node -P tsconfig.scripts.json prisma/init-admin.ts",
     "reset-password": "ts-node -P tsconfig.scripts.json prisma/reset-password.ts",
@@ -17,7 +20,7 @@
     "seed": "ts-node -P tsconfig.scripts.json prisma/seeds/seed.ts"
   },
   "dependencies": {
-    "next": "14.1.0",
+    "next": "^14.2.35",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "lucide-react": "^0.330.0",
@@ -27,7 +30,7 @@
     "@prisma/client": "^5.10.0",
     "next-auth": "^4.24.6",
     "bcryptjs": "^2.4.3",
-    "xlsx": "^0.18.5",
+    "exceljs": "^4.4.0",
     "papaparse": "^5.4.1"
   },
   "devDependencies": {
@@ -41,6 +44,13 @@
     "prisma": "^5.10.0",
     "ts-node": "^10.9.2",
     "@types/bcryptjs": "^2.4.6",
-    "@types/papaparse": "^5.3.14"
+    "@types/papaparse": "^5.3.14",
+    "jest": "^29.7.0",
+    "@testing-library/react": "^14.1.2",
+    "@testing-library/jest-dom": "^6.1.5",
+    "@testing-library/user-event": "^14.5.1",
+    "jest-environment-jsdom": "^29.7.0",
+    "@types/jest": "^29.5.8",
+    "jest-mock-extended": "^3.0.5"
   }
 }
