--- a/package.json
+++ b/package.json
@@ -20,37 +20,40 @@
     "seed": "ts-node -P tsconfig.scripts.json prisma/seeds/seed.ts"
   },
   "dependencies": {
+    "@prisma/client": "^5.10.0",
+    "@tanstack/react-query": "^5.90.14",
+    "bcryptjs": "^2.4.3",
+    "clsx": "^2.1.0",
+    "exceljs": "^4.4.0",
+    "lucide-react": "^0.330.0",
     "next": "^14.2.35",
+    "next-auth": "^4.24.6",
+    "papaparse": "^5.4.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "lucide-react": "^0.330.0",
     "recharts": "^2.12.0",
-    "clsx": "^2.1.0",
     "tailwind-merge": "^2.2.0",
-    "@prisma/client": "^5.10.0",
-    "next-auth": "^4.24.6",
-    "bcryptjs": "^2.4.3",
-    "exceljs": "^4.4.0",
-    "papaparse": "^5.4.1"
+    "zod": "^4.2.1",
+    "zustand": "^5.0.9"
   },
   "devDependencies": {
+    "@testing-library/jest-dom": "^6.1.5",
+    "@testing-library/react": "^14.1.2",
+    "@testing-library/user-event": "^14.5.1",
+    "@types/bcryptjs": "^2.4.6",
+    "@types/jest": "^29.5.8",
     "@types/node": "^20.11.0",
+    "@types/papaparse": "^5.3.14",
     "@types/react": "^18.2.0",
     "@types/react-dom": "^18.2.0",
     "autoprefixer": "^10.4.17",
-    "postcss": "^8.4.35",
-    "tailwindcss": "^3.4.1",
-    "typescript": "^5.3.0",
-    "prisma": "^5.10.0",
-    "ts-node": "^10.9.2",
-    "@types/bcryptjs": "^2.4.6",
-    "@types/papaparse": "^5.3.14",
     "jest": "^29.7.0",
-    "@testing-library/react": "^14.1.2",
-    "@testing-library/jest-dom": "^6.1.5",
-    "@testing-library/user-event": "^14.5.1",
     "jest-environment-jsdom": "^29.7.0",
-    "@types/jest": "^29.5.8",
-    "jest-mock-extended": "^3.0.5"
+    "jest-mock-extended": "^3.0.5",
+    "postcss": "^8.4.35",
+    "prisma": "^5.10.0",
+    "tailwindcss": "^3.4.1",
+    "ts-node": "^10.9.2",
+    "typescript": "^5.3.0"
   }
 }
